tdf#169019 write char not number, read col from 0

Write: Separator as string not as number.
Read: Column index starts at 0, although in dialog is starts at 1
I have not checked the other transformations but only ColumnSplit.

Change-Id: I37812a4b575a425981ed09257263c829bd2eefc4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192929
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Tested-by: Jenkins